fix double scroll bar issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,3 +55,12 @@ body {
     opacity: 1;
   }
 }
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
